wayland: Implement activities window rule

BUG: 439022


(cherry picked from commit b482226d6cefa0db1c22c7319ef751b2846e3d73)